# Shootout-Night

./: .gitignore  Changelog.txt  Manual.txt  README.md  entities.py  index.html  main.py  pyproject.toml  shootout-night.apk
.github/workflows/: python.yml
