[project]
name = "shootout-night"
version = "1.1.0"
description = "A small game project with pygame"
authors = [
    {name = "Dennys",email = "dennysmsq@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
